--- a/Home.html
+++ b/Home.html
@@ -22,13 +22,16 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="Home.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="/MahajanConsultancyBootStrap
+/Home.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link" href="/MahajanConsultancyBootStrap
+/about.html">About</a>
               </li>
               <li class="nav-item">                
-                <a class="nav-link" href="Contact Us.html">Contact Us</a>
+                <a class="nav-link" href="/MahajanConsultancyBootStrap
+/Contact Us.html">Contact Us</a>
               </li>
               
               <li class="nav-item dropdown">
